[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferencebank"
version = "0.0.1"
authors = [
    { name="InferenceBank", email="inquiries@inferencebank.org" },
]
license = { text="MIT" }

dependencies = [
    "requests>=2.32.3, <3",
]
description = "The official Python library for the InferenceBank API"
readme = "../README.md"
requires-python = ">=3.11"
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://inferencebank.org"
Repository = "https://github.com/inferencebank/inferencebank"
Issues = "https://github.com/inferencebank/inferencebank/issues"
